# GetScore

./: .env.example  .gitignore  README.md  getscore.bat  main.py  pyproject.toml
discuss/: architecture.md
scripts/: run.sh  schedule.sh  setup.sh  test.sh  view.sh
src/: __init__.py  auth.py  config.py  database.py  fetcher.py  models.py  notifier.py  parser.py  scheduler.py  viewer.py
