[project]
name = "getscore"
version = "1.0.0"
description = "广西师范大学教务系统成绩查询与监控"
requires-python = ">=3.8"
dependencies = [
    "requests>=2.31",
    "pycryptodome>=3.20",
    "apscheduler>=3.10",
    "python-dotenv>=1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
